# movie-surfer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yml
data/processed/: .gitignore
docker/: .env.example  docker-compose.yml  mlflow_test.py
docker/mlflow_image/: Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
models/Docker/: docker-compose.yml  mlflow_test.py
models/Docker/mlflow_image/: Dockerfile
moviesurfer/cli/: main.py
moviesurfer/cli/data/: __init__.py  download.py  split.py
moviesurfer/data/: download_data.py  make_dataset.py  split.py  utils.py
moviesurfer/metrics/: classification.py
moviesurfer/models/: __init__.py  base.py  popular.py
prototypes/most-popular/: config.py  main.py
tests/moviesurfer/metrics/: test_classification.py
tests/moviesurfer/models/: test_popular.py
