[tool.poetry]
name = "movie-surfer"
version = "0.1.0"
description = ""
authors = ["Islam Iangurazov <islamyang123@gmail.com>"]
readme = "README.md"
packages = [{include = "moviesurfer"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
coverage = "^7.2.5"
flake8 = "^6.0.0"
python-dotenv = ">=0.5.1"
wget = "3.2"
unzip = "^1.0.0"
dvc = "^2.56.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
